Fix image overflow issue on ProjectModal and ProjectCard

--- a/src/components/ProjectCard/ProjectCard.scss
+++ b/src/components/ProjectCard/ProjectCard.scss
@@ -7,46 +7,21 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 100%;
   gap: 1.5rem;
-  margin-top: 28rem;
-  margin-bottom: 8rem;
   transition: 1s ease;
-
-  @include tablet{
-    margin-top: 12rem;
-    margin-bottom: 1rem;
-  }
 
   @include desktop {
     flex-direction: row;
     align-items: center;
-    margin-top: 0;
-    margin-bottom: 0;
     gap: 3rem
   }
 
   &__image {
+    height: 80%;
     width: 100%;
-    transition: 0.5s ease;
+    margin-top: 0.5rem;
+    object-fit: cover;
     cursor: pointer;
-
-    @include desktop {
-      width: 30vw;
-    }
-
-    &-container{
-      display: flex;
-      justify-content: center;
-      width: 100%;
-
-      @include tablet {
-        width: 70%;
-      }
-      @include desktop {
-        width: 100%;
-      }
-    }
   }
 
   &__description {
