--- a/src/components/ProjectModal/ProjectModal.scss
+++ b/src/components/ProjectModal/ProjectModal.scss
@@ -8,8 +8,8 @@
   justify-content: center;
   align-items: center;
   z-index: 1001; /* Sit on top */
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
+  width: 100vw; /* Full width */
+  height: 100vh; /* Full height */
   overflow: auto; /* Enable scroll if needed */
   background-color: rgb(0, 0, 0); /* Fallback color */
   background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
@@ -27,32 +27,42 @@
   }
 
   &__container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 90%;
-    width: 90%;
+    position: relative;
+    gap:1rem;
+    height: 80vh;
+    width: 90vw;
     padding: 1rem;
     background-color: white;
-    z-index: 1003;
-    overflow-y: scroll;
+    z-index: 1002;
+    overflow: auto;
 
-    @include tablet{
-        height: 80%;
-        width: 80%;
-        padding: 2rem;
-        
+    @include tablet {
+      height: 80vh;
+      width: 80vw;
+      padding: 2rem;
     }
 
-    @include desktop{
-        overflow: hidden;
+    @include desktop {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      overflow: hidden;
     }
   }
 
-  &__close-button{
+  &__close-button {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 2rem;
+    width: 2rem;
     color: black;
     background-color: red;
+    top:0;
+    right:0;
+    cursor: pointer;
   }
 }
 
